--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "dotenv": "^16.3.1",
+    "pinia": "^2.1.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
