--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.3.1",
     "pinia": "^2.1.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.3.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
