--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuetify": "^3.3.10"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0"
