--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.5",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dotenv": "^16.3.1",
