--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "serve-static": "^1.15.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.3.10"
+    "vuetify": "^3.3.10",
+    "typescript": "~4.5.5"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
