--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pinia": "^2.1.6",
+    "register-service-worker": "^1.7.2",
     "serve-static": "^1.15.0",
     "typescript": "~4.7.4",
     "vue": "^3.2.13",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@mdi/font": "^7.2.96",
     "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
